fix: sitemap structure

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -59,17 +59,18 @@
                                 <div class="accordion-content">
                                     <p>
                                         "Community Representation" and "Create Meaningful Connections" value that have
-                                        been established is designed to so that
-                                        people can express, share, and connect with others in their community.
+                                        been established is designed to so that people can express, share, and connect
+                                        with others in their community. Based on User needs 1 and 2 in Value 1, users
+                                        and communities need a platform to express their culture through cuisines.
 
-                                        Based on the needs derived from the values and user stories, users need a "way"
-                                        to express their community identity and cultural background, and it's been
-                                        identified that one of the way is through food and cuisines sharing.
+                                        <br />
+                                        <br />
 
-                                        But, In order to accomodate the needs of "connecting with others", we don't only
-                                        post about cuisines, but also in other forms in order to not limit the way
-                                        people can express their community identity.
-
+                                        Furthemore, Based on Value 3 "Create Meaningful Connections", users need a
+                                        platform to connect with others, and therefore we don't want to limit the
+                                        community representation only in a form of a recipe sharing or food related
+                                        posts, but also in other forms in order to not limit the way people can express
+                                        their community identity and connect with others.
 
                                         <br />
                                         <br />
@@ -84,7 +85,7 @@
                                         <br />
                                         <br />
 
-                                        Crumbs can be three types a general text-based post like
+                                        Crumbs can be three types, a general text-based post like
                                         Reddit/Twitter, Traditional Cuisine Recipe or attempted recipe sharing posts,
                                         and a Community Event Promotion.
 
@@ -190,21 +191,6 @@
                                     </div>
 
                                     <div class="accordion-item m-y-6">
-                                        <button class="accordion-header">▷ Community Notes</button>
-                                        <div class="accordion-content">
-                                            <p>
-                                                As described in FeedCrumbs, each crumb may have commnunity notes if
-                                                necessary.
-                                                Everyone can add community notes, but to improve the quality of
-                                                community notes, each time
-                                                a Crumb is flagged as "need to check" by the system, the community
-                                                representative will be the
-                                                first to be notified to add a community note.
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                    <div class="accordion-item m-y-6">
                                         <button class="accordion-header">▷ Detail and Interaction</button>
                                         <div class="accordion-content">
                                             <p>
@@ -243,7 +229,25 @@
                                                 replies,
                                                 and share the post to others, similiar to reddit.
                                             </p>
+                                            <div class="accordion-item m-y-6">
+                                                <button class="accordion-header">▷ Community Notes</button>
+                                                <div class="accordion-content">
+                                                    <p>
+                                                        As described in FeedCrumbs, each crumb may have commnunity notes
+                                                        if
+                                                        necessary.
+                                                        Everyone can add community notes, but to improve the quality of
+                                                        community notes, each time
+                                                        a Crumb is flagged as "need to check" by the system, the
+                                                        community
+                                                        representative will be the
+                                                        first to be notified to add a community note.
+                                                    </p>
+                                                </div>
+                                            </div>
                                         </div>
+
+
                                     </div>
                                 </div>
                             </div>
