feat: add home page annotation

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -49,13 +49,103 @@
                     <div class="accordion-content">
                         <p class="p-b-3">
                             This is my annotation for my website sitemap implementation. This section is to show how
-                            the sitemap relates to the client goals and user needs. Each annotations also includes
+                            the sitemap relates to the client goals, values, user needs, and user stories. Each
+                            annotations also includes
                             the describe the purpose, features, functionality, and accessibility considerations of each
                             page.
                         </p>
+                        <div class="accordion nested p-b-4">
+                            <div class="accordion-item">
+                                <button class="accordion-header">▷ Home Page</button>
+                                <div class="accordion-content">
+                                    <p>
+                                        The home page is the landing page of the website. This page is designed to
+                                        provide a brief overview of the website's purpose and values, and to
+                                        encourage users to explore further. The home page is the first page that the
+                                        users will see when first accessing this website therefore its important to give
+                                        a
+                                        short but powerful first impression to the users through this page.
+
+                                        <br />
+                                        <br />
+
+                                        Since this is the also the main entry point of the website, and based on the
+                                        user stories which mentioned that
+                                        messy navigational elements can be a barrier for users to access the platform, a
+                                        clear structure
+                                        and logical navigations to other pages are important. Therefore it is important
+                                        to ensure WCAG 3.2.3 is adhered in this page (And also on all other pages), so
+                                        that the users can easily navigate through the website.
+
+
+                                        <br />
+                                        <br />
+
+                                        Following the neeeds mentioned in Value 2, users need an easy and
+                                        accessible to access resource and the user stories which mentioned that
+                                        simple languages and clear instructions are important, the home page will be
+                                        adhering to WCAG 3.1.5 (Reading Level), so that the content is easy to read
+                                        especially for new users who have no idea about the platform.
+
+
+                                    </p>
+                                    <div class="accordion-item p-t-4">
+                                        <button class="accordion-header">▷ Landing Page and Login/Register</button>
+                                        <div class="accordion-content">
+                                            This is the very first things that the users will see when accessing the
+                                            website. This will show the title images/illustrations that represents
+                                            the website, and along with some short descriptions about the website.
+                                            This part will also equipped with buttons prompt users to either login or
+                                            register to the platform.
+
+                                            <br />
+                                            <br />
+                                            Following the value 4, of Inclusivity and Accessibility, since there might
+                                            be images/illustration in this part, WCAG 1.1.1 (Non-text
+                                            Content) and also WCAG 1.4.3 (Contrast) will be adhered to make sure that
+                                            the images/illustrations has appropriate alternative text, and also
+                                            enough contrast ratio between the text and background for visually impaired
+                                            users.
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item p-t-4">
+                                        <button class="accordion-header">▷ Highlights</button>
+                                        <div class="accordion-content">
+                                            This section acts as the "Hook" to get visitors attentions, to explore more
+                                            about the platform. This will show some highlights of the platform, such as
+                                            popular crumblings, upcoming OZvents, and popular runes (Crumblings,
+                                            OZvents,
+                                            and Runes will be explained further). This section will also serve the
+                                            purpose
+                                            to showcase the community representation aspect of the platform and how the
+                                            community inside
+                                            the platform looks like.
+
+                                            <br />
+                                            <br />
+
+                                            Since there will be several texts and images in this section, WCAG 1.4.4
+                                            (Resize text) and WCAG 1.4.3 (Contrast) will also be followed in this
+                                            section to maintain accessibility for users.
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item p-t-4">
+                                        <button class="accordion-header">▷ About</button>
+                                        <div class="accordion-content">
+                                            This section is to give a short description of the platform such as the
+                                            goals, values, and missions. This section is important to give users a
+                                            context
+                                            about the platform, and what they can expect from it.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="accordion nested">
                             <div class="accordion-item">
-                                <button class="accordion-header">▷ Crumbs (Timeline)</button>
+                                <button class="accordion-header">▷ FeedCrumbs (Timeline)</button>
                                 <div class="accordion-content">
                                     <p>
                                         "Community Representation" and "Create Meaningful Connections" value that have
