feat: add wireframes

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -175,9 +175,9 @@
                                         <br />
                                         <br />
 
-                                        Based on the user stories from Johnny, a gamification of the features can
-                                        helpful
-                                        to support the ease of usage. Therefore elements in "Crumbs" has terms that
+                                        Inspired by a user story from Johnny, a gamification of the features can
+                                        helpful to support the ease of usage. Therefore elements in "Crumbs" has terms
+                                        that
                                         make it easier for people to remember and understand.
                                         Crumbs can be three types, a general text-based post like
                                         Reddit/Twitter, Traditional Cuisine Recipe or attempted recipe sharing posts,
