--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -18,20 +18,20 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="site_map.html">Site Map</a></li>
-            <li><a aria-current="page" href="style_guide.html">Guide</a></li>
+            <li><a href="index.html"><span class="icon">🏚️</span></a></li>
+            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
+            <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
         </ul>
     </nav>
-
-    <nav id="nav-dekstop" aria-label="Desktop Navigation">
+    <nav id="nav-dekstop" aria-label="Dekstop Navigation">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a aria-current="page" href="visceral_design.html">Visceral</a></li>
-            <li><a href="behavioural_design.html">Behavioral</a></li>
-            <li><a href="reflective_design.html">Reflective</a></li>
-            <li><a href="site_map.html">Site Map</a></li>
-            <li><a href="style_guide.html">Style Guide</a></li>
+            <li><a href="index.html"><span class="icon">Home</span></a></li>
+            <li><a href="site_map.html"><span class="icon">Site Map</span></a></li>
+            <li><a href="style_guide.html" aria-current="page"><span class="icon">Style Guide</span></a></li>
+            <li><a href="ethical_response.html"><span class="icon">Ethical Response</span></a></li>
+            <li><a href="genai_mt_acknowledgement.html"><span class="icon">Gen AI</span></a></li>
         </ul>
     </nav>
 
