--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -18,20 +18,20 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="site_map.html">Site Map</a></li>
-            <li><a aria-current="page" href="style_guide.html">Guide</a></li>
+            <li><a href="index.html"><span class="icon">🏚️</span></a></li>
+            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
+            <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
         </ul>
     </nav>
-
-    <nav id="nav-dekstop" aria-label="Desktop Navigation">
+    <nav id="nav-dekstop" aria-label="Dekstop Navigation">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="visceral_design.html">Visceral</a></li>
-            <li><a href="behavioural_design.html">Behavioral</a></li>
-            <li><a href="reflective_design.html">Reflective</a></li>
-            <li><a href="site_map.html">Site Map</a></li>
-            <li><a aria-current="page" href="style_guide.html">Style Guide</a></li>
+            <li><a href="index.html"><span class="icon">Home</span></a></li>
+            <li><a href="site_map.html"><span class="icon">Site Map</span></a></li>
+            <li><a href="style_guide.html" aria-current="page"><span class="icon">Style Guide</span></a></li>
+            <li><a href="ethical_response.html"><span class="icon">Ethical Response</span></a></li>
+            <li><a href="genai_mt_acknowledgement.html"><span class="icon">Gen AI</span></a></li>
         </ul>
     </nav>
 
@@ -57,10 +57,13 @@
                             first impressions, and sensory appeal.
                         </p>
                         <ul class="design-features">
-                            <li>Color palette and visual hierarchy</li>
+                            <li>Color palette</li>
                             <li>Typography and spacing</li>
                             <li>Visual impact and appeal</li>
                         </ul>
+                        <button class="m-t-4 button button-primary">
+                            <a href="visceral_design.html">Learn More</a>
+                        </button>
                     </div>
                 </article>
 
