feat: add wireframe to visceral design

--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -38,11 +38,11 @@
     <main>
         <div class="container">
             <header class="m-b-8">
-                <h1 class="m-b-4">Style Guide</h1>
-                <h3 class="m-b-6">Sam's Style Guide Overview for the community sharing platform</h3>
+                <h2 class="m-b-4 p-t-4">Style Guide</h2>
+                <h3 class="m-b-6">The Style Guide that are going to be used in the FeedCrumbs Website</h3>
                 <p class="m-b-8">
-                    This is the Style Guide for this work phase 3, outlining 3 main points
-                    of design: Visceral, Behavioral, and Reflective Design.
+                    This is the Style Guide for the FeedCrumbs website, focusing on the three levels of design:
+                    Visceral, Behavioral, and Reflective.
                 </p>
             </header>
 
@@ -57,9 +57,9 @@
                             first impressions, and sensory appeal.
                         </p>
                         <ul class="design-features">
+                            <li>Layout and Wireframe</li>
                             <li>Color palette</li>
                             <li>Typography and spacing</li>
-                            <li>Visual impact and appeal</li>
                         </ul>
                         <button class="m-t-4 button button-primary">
                             <a href="visceral_design.html">Learn More</a>
@@ -73,14 +73,17 @@
                     </div>
                     <div class="card-content p-6">
                         <p class="m-b-4">
-                            The experience of use and functionality. Emphasizes usability,
-                            interaction patterns, and user efficiency.
+                            The experience of use, functionality, usability,
+                            and interaction patterns. Includes how users navigate and interact with the design.
                         </p>
                         <ul class="design-features">
                             <li>Navigation and user flows</li>
-                            <li>Interactive components</li>
+                            <li>High fidelity components</li>
                             <li>Responsive design patterns</li>
                         </ul>
+                        <button class="m-t-4 button button-primary">
+                            <a href="behavioural_design.html">Learn More</a>
+                        </button>
                     </div>
                 </article>
 
@@ -90,14 +93,17 @@
                     </div>
                     <div class="card-content p-6">
                         <p class="m-b-4">
-                            The meaning and personal significance of the design. Considers cultural
-                            context, personal values, and long-term satisfaction.
+                            The meaning and personal feeling of the design. Includes how users
+                            perceive the brand and their emotional connection to it.
                         </p>
                         <ul class="design-features">
                             <li>Content strategy and messaging</li>
                             <li>Brand identity and values</li>
                             <li>User engagement and retention</li>
                         </ul>
+                        <button class="m-t-4 button button-primary">
+                            <a href="reflective_design.html">Learn More</a>
+                        </button>
                     </div>
                 </article>
             </section>
