--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -35,63 +35,70 @@
         </ul>
     </nav>
 
+
+
     <main>
         <div class="container">
+            <div class="breadcrumbs-link">
+                <a href="style_guide.html">Style Guide</a> &gt; <span class="active">Visceral Design</span>
+            </div>
+
             <header class="m-b-8">
-                <h1 class="m-b-4">Visceral Design</h1>
-                <h3 class="m-b-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, sit?</h3>
+                <h2 class="m-b-4 p-t-2">Visceral Design</h2>
+                <h3 class="m-b-6">
+                    This is the visceral design aspect of the FeedCrumbs website
+                </h3>
                 <p class="m-b-8">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel ipsam totam pariatur iusto
-                    molestiae reprehenderit id ad maiores deserunt.
+                    This content represent the immediate emotional response to visual design. Focuses on aesthetics,
+                    first impressions, and sensory appeal.
                 </p>
             </header>
 
             <article class="base-card m-b-12">
-                <h2 class="m-b-6">Wireframe Gallery</h2>
+                <h3 class="m-b-6">Wireframe Gallery</h3>
                 <p class="m-b-8">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus
-                    deleniti esse illum, aliquid a officia cum nulla corporis blanditiis labore aut! Eveniet cumque
-                    commodi esse!
+                    Below are some wireframe examples that illustrate the layout and structure of key pages and
+                    components within the FeedCrumbs website.
                 </p>
 
                 <div class="image-gallery">
                     <div class="gallery-item">
-                        <img src="https://via.placeholder.com/400x300/3498db/ffffff?text=Homepage+Layout"
+                        <img src="../work_phase_3/assets/home.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
                         <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://via.placeholder.com/400x300/e74c3c/ffffff?text=Mobile+Navigation"
+                        <img src="../work_phase_3/assets/home_mobile.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
                         <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://via.placeholder.com/400x300/2c3e50/ffffff?text=Content+Grid"
+                        <img src="../work_phase_3/assets/map.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
                         <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://via.placeholder.com/400x300/27ae60/ffffff?text=Form+Design"
+                        <img src="../work_phase_3/assets/map_mobile.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
                         <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://via.placeholder.com/400x300/9b59b6/ffffff?text=Typography+Scale"
+                        <img src="../work_phase_3/assets/timeline.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
                         <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://via.placeholder.com/400x300/f39c12/ffffff?text=Color+System"
+                        <img src="../work_phase_3/assets/timeline_mobile.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
                         <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
