feat: add sidebar

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -66,42 +66,42 @@
                         <img src="../work_phase_3/assets/home.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
-                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                        <h4 class="m-t-3">Home Page</h4>
                     </div>
 
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/home_mobile.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
-                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                        <h4 class="m-t-3">Home Page (Mobile)</h4>
                     </div>
 
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/map.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
-                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                        <h4 class="m-t-3">CrumbsMap</h4>
                     </div>
 
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/map_mobile.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
-                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                        <h4 class="m-t-3">CrumbsMap (Mobile)</h4>
                     </div>
 
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/timeline.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
-                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                        <h4 class="m-t-3">FeedCrumbs</h4>
                     </div>
 
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/timeline_mobile.png"
                             alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
                             class="responsive-img">
-                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                        <h4 class="m-t-3">FeedCrumbs (Mobile)</h4>
                     </div>
                 </div>
             </article>
@@ -247,6 +247,25 @@
             <div class="p-y-24"></div>
         </div>
     </main>
+
+    <div class="sidebar-overlay"></div>
+    <div class="sidebar">
+        <div class="sidebar-header">
+            <h3>Image Details</h3>
+            <button class="close-btn" aria-label="Close sidebar">&times;</button>
+        </div>
+        <div class="sidebar-content">
+            <div class="sidebar-image-wrapper">
+                <img id="sidebarImage" class="sidebar-image" src="" alt="">
+            </div>
+            <div class="sidebar-annotation">
+                <h4>Annotation</h4>
+                <p id="sidebarAnnotation"></p>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="js/visceral_design.js"></script>
 </body>
 
 </html>
